{
    "name": "InputConrolls",
    "maps": [
        {
            "name": "New action map",
            "id": "86edf822-4014-4cca-bce0-ca343249234c",
            "actions": [
                {
                    "name": "MyTouchPosition",
                    "type": "Value",
                    "id": "c1e9c5ba-765f-4e10-8d09-aae2cad33b20",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MyTouchDown",
                    "type": "Button",
                    "id": "33e111ab-362b-47bd-b147-ca8f3679e083",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MyTouchUp",
                    "type": "Button",
                    "id": "c4be36d6-0e32-4637-92b8-112bced408f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "24f6784f-8ace-4947-b5dd-c2d2b9134b49",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MyTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24d0f66b-b8af-4bf6-a94b-8dbb90086a68",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MyTouchDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd7971b8-791a-4cd8-b622-f831f1069b12",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "MyTouchUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}